# cccc

./: .gitignore  CMakeLists.txt  README.md  cccc.c  cccc.h
tests/: metricTests.c
